--- a/book_management/src/main/resources/application.properties
+++ b/book_management/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
-#PostgreSql
+PostgreSql
 #spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
 #spring.datasource.username=postgres
 #spring.datasource.password=0000
