--- a/book_management/src/main/resources/application.properties
+++ b/book_management/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 PostgreSql
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
-#spring.datasource.username=postgres
-#spring.datasource.password=0000
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Swagger UI
 springdoc.api-docs.enabled=true
